<resources>
    <string name="app_name">TimeCardClient</string>
    <string name="action_settings">Settings</string>
    <string name="timerTxt">00:00</string>
    <string name="timerButtonTxt">Start/Stop</string>
    <string name="timerStateLable">timerState</string>
    <string name="startTimeLable">startTime</string>
    <string name="stopTimeLable">stopTime</string>
    <string name="carNumberHint">Car Number</string>
    <string name="wrongTest">W.T</string>
    <string name="layoutHint">Layout Name</string>
    <string name="marshalHint">Marshal Name</string>
    <string name="hostHint">Host Address</string>
    <string name="layoutKey">LayoutKey</string>
    <string name="marshalKey">MarshalKey</string>
    <string name="hostKey">HostKey</string>
    <string name="resetButtonTxt">Reset</string>

</resources>
