<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_timer" tools:context=".TimerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timerTxt"
        android:id="@+id/timer"
        android:textSize="72sp"
        android:layout_below="@+id/carNumber"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerButtonTxt"
        android:id="@+id/button"
        android:onClick="onStartStop"
        android:nestedScrollingEnabled="true"
        android:width="150dp"
        android:height="75dp"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carNumber"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:width="120dp"
        android:hint="@string/carNumberHint"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrongTest"
        android:id="@+id/wTSwitch"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/penaltyPicker"
        android:layout_below="@+id/wTSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

</RelativeLayout>
